make sure we truncate the page title before the 'new ticket in' button
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.8-TESTING@12786 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/share/html/NoAuth/css/web2/layout.css
+++ b/share/html/NoAuth/css/web2/layout.css
@@ -200,14 +200,16 @@ div#quick-personal {
 }
 
 
-
 div#header h1 {
  position: absolute;
  left: 6.8em;
+ right: 22em;
+ overflow: hidden;
  font-size: 1.4em;
  margin-top: 0.125em;
  padding: 0.25em;
  color: #fff;
+ border: 1px solid red;
 }
 
 body#comp-index td.boxcontainer {
